--- a/interfaces/pay.html
+++ b/interfaces/pay.html
@@ -1,92 +1,181 @@
-<div id="status"></div>
+<html>
+<head>
+  <title>Pay user storage</title>
+</head>
+<body>
+  <div>
+    <p>Current address: <span id="currentAddress">0x0</span></p>
+    <p>Value: <span id="currentValue">None</span></p>
+    <button id="getValue">Get value</button>
+    <p>New value: <input id="newValue" type="text"></input></p>
+    <button id="setValue">Set value</button>
+  </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
-<script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/ethereumjs/browser-builds/dist/ethereumjs-tx/ethereumjs-tx-1.3.3.min.js"></script>
+  <script>
 
-  const rpcURL = 'http://127.0.0.1:8545'
-  const web3 = new Web3(rpcURL)
-  const testAccount = '0x37c635576fac7B9E4aAb6cBD2d6410a11f31B143'
+    App = {
+      web3Provider: null,
+      contracts: {},
 
-  async function checkEth() {
-    if (window.ethereum) {
-      await window.ethereum.send('eth_requestAccounts');
-      window.web3 = new Web3(window.ethereum);
-      return true;
-    }
-    return false;
-  }
-
-  const run = async function(account) {
-    $.getJSON("../build/deployments/map.json", data => {
-      for (const [id, deployments] of Object.entries(data)) {
-        const address = deployments.pay_user_storage[deployments.storage.length - 1];
-        const contractJson = `../build/deployments/${id}/${address}.json`;
-        $.getJSON(contractJson, data => {
-          const contract = new web3.eth.Contract(data.abi, address)
-
-          contract.methods.get(testAccount).call((err, result) => {
-            console.log(result)
-            contract.methods.set(88).send({from: account}, (err, result) => {
-              if (!err) {
-                contract.methods.get(account).call((err, result) => {
-                  if (!err) {
-                    console.log(result);
-                  } else {
-                    console.error(err);
-                  }
-                })
-              } else {
-                console.error(err);
-              }
-            })
+      init: function() {
+        return App.initWeb3();
+      },
+      initWeb3: function() {
+        if (typeof web3 != 'undefined') {
+          App.web3Provider = web3.currentProvider;
+        } else {
+          App.web3Provider = new Web3.providers.HttpProvider('http://localhost:7545');
+        }
+        web3 = new Web3(App.web3Provider);
+        return App.initContract();
+      },
+      initContract: function() {
+        $.when(
+          $.getJSON("../build/deployments/map.json", data => {
+            for (const [id, deployments] of Object.entries(data)) {
+              const address = deployments.pay_user_storage[deployments.storage.length - 1];
+              const contractJson = `../build/deployments/${id}/${address}.json`;
+              $.getJSON(contractJson, data => {
+                App.contracts.Pay = new web3.eth.Contract(data.abi, address)
+              })
+            }
           })
-          contract.methods.pay(testAccount).send(
-              {from: account,
-               value: 1}, (err, result) => {
-            if (!err) {
-              console.log('money sent')
-              web3.eth.getBalance(testAccount).then(console.log);
-              web3.eth.getBalance(account).then(console.log);
-            } else {
-              console.error(err)
+        ).then(function() {
+          App.run();
+        })
+      },
+      run: function() {
+        web3.eth.getAccounts(function(error, accounts) {
+          if (error) {
+            console.log(error);
+          }
+          var account = accounts[0];
+          $('#currentAddress').text(account);
+          App.get();
+          $(document).on('click', '#getValue', App.get);
+          $(document).on('click', '#setValue', App.set);
+        })
+      },
+      get: function(event) {
+        web3.eth.getAccounts(function(error, accounts) {
+          if (error) {
+            console.log(error);
+          }
+          var account = accounts[0];
+          App.contracts.Pay.methods.get(account).call((err, result) => {
+            $('#currentValue').text(result);
+          })
+        })
+      },
+      set: function(event) {
+        web3.eth.getAccounts(function(error, accounts) {
+          if (error) {
+            console.log(error);
+          }
+          var account = accounts[0];
+          const newValue = $('#newValue').val();
+          App.contracts.Pay.methods.set(newValue).send({from: account}, (err, result) => {
+            if (err) {
+              console.error(err);
             }
           })
         })
-      }
-    })
-  }
+      },
+    }
 
-  web3.eth.getAccounts().then((accounts) => {run(accounts[0]);});
-  // checkEth()
+    // const rpcURL = 'http://127.0.0.1:8545'
+    // const web3 = new Web3(rpcURL)
+    //
+    // async function checkEth() {
+    //   if (window.ethereum) {
+    //     await window.ethereum.send('eth_requestAccounts');
+    //     window.web3 = new Web3(window.ethereum);
+    //     return true;
+    //   }
+    //   return false;
+    // }
+    //
+    // const run = async function(account) {
+    //   $('#currentAddress').text(account);
+    //   $.getJSON("../build/deployments/map.json", data => {
+    //     for (const [id, deployments] of Object.entries(data)) {
+    //       const address = deployments.pay_user_storage[deployments.storage.length - 1];
+    //       const contractJson = `../build/deployments/${id}/${address}.json`;
+    //       $.getJSON(contractJson, data => {
+    //         const contract = new web3.eth.Contract(data.abi, address)
+    //
+    //         contract.methods.get(account).call((err, result) => {
+    //           console.log(result)
+    //           contract.methods.set(88).send({from: account}, (err, result) => {
+    //             if (!err) {
+    //               contract.methods.get(account).call((err, result) => {
+    //                 if (!err) {
+    //                   console.log(result);
+    //                 } else {
+    //                   console.error(err);
+    //                 }
+    //               })
+    //             } else {
+    //               console.error(err);
+    //             }
+    //           })
+    //         })
+    //         // contract.methods.pay(testAccount).send(
+    //         //     {from: account,
+    //         //      value: 1}, (err, result) => {
+    //         //   if (!err) {
+    //         //     console.log('money sent')
+    //         //     web3.eth.getBalance(testAccount).then(console.log);
+    //         //     web3.eth.getBalance(account).then(console.log);
+    //         //   } else {
+    //         //     console.error(err)
+    //         //   }
+    //         // })
+    //       })
+    //     }
+    //   })
+    // }
 
-  // $(document).ready(function() {
-  //   if (!ethEnabled()) {
-  //     console.log('Connecting to infura');
-  //     try {
-  //       const rpcURL = 'https://rinkeby.infura.io/v3/49775e1c3d3a4851b61602c4af9c56d6'
-  //       window.web3 = new Web3(rpcURL)
-  //     } catch (error) {
-  //       alert(error)
-  //     }
-  //   }
-  //   getValue();
-  //   pay();
-  // })
-  //
-  // const abi = [{"name": "DataChange", "inputs": [{"name": "setter", "type": "address", "indexed": true}, {"name": "value", "type": "uint256", "indexed": false}], "anonymous": false, "type": "event"}, {"stateMutability": "nonpayable", "type": "constructor", "inputs": [{"name": "_x", "type": "uint256"}], "outputs": []}, {"stateMutability": "nonpayable", "type": "function", "name": "set", "inputs": [{"name": "new_value", "type": "uint256"}], "outputs": [], "gas": 37090}, {"stateMutability": "view", "type": "function", "name": "get", "inputs": [{"name": "user", "type": "address"}], "outputs": [{"name": "", "type": "uint256"}], "gas": 2633}, {"stateMutability": "payable", "type": "function", "name": "pay", "inputs": [{"name": "user", "type": "address"}], "outputs": [], "gas": 36611}, {"stateMutability": "view", "type": "function", "name": "stored_data", "inputs": [{"name": "arg0", "type": "address"}], "outputs": [{"name": "", "type": "uint256"}], "gas": 2693}]
-  // const contactAddress = '0xbee4d28057596cfb1c381f2ebbb8eb5143c36159'
-  // async function getValue() {
-  //   console.log('GetValue')
-  //   const contract = new window.web3.eth.Contract(abi, contactAddress);
-  //   contract.methods.get('0x7e583bf0284c1830ff38a3b18c2eca497d34b687').call((err, result) => {
-  //     console.log(result) })
-  // }
-  //
-  // async function pay() {
-  //   const contract = new window.web3.eth.Contract(abi, contactAddress);
-  //   contract.methods.pay('0x09d94aF784e2b033B0B5D9425C7767649adEE820').call((err, result) => {
-  //     console.log(result) })
-  // }
-  </script>
+    $(window).on('load', function () {
+      // web3.eth.getAccounts().then((accounts) => {run(accounts[0]);});
+
+      App.init();
+
+    });
+
+    // checkEth()
+
+    // $(document).ready(function() {
+    //   if (!ethEnabled()) {
+    //     console.log('Connecting to infura');
+    //     try {
+    //       const rpcURL = 'https://rinkeby.infura.io/v3/49775e1c3d3a4851b61602c4af9c56d6'
+    //       window.web3 = new Web3(rpcURL)
+    //     } catch (error) {
+    //       alert(error)
+    //     }
+    //   }
+    //   getValue();
+    //   pay();
+    // })
+    //
+    // const abi = [{"name": "DataChange", "inputs": [{"name": "setter", "type": "address", "indexed": true}, {"name": "value", "type": "uint256", "indexed": false}], "anonymous": false, "type": "event"}, {"stateMutability": "nonpayable", "type": "constructor", "inputs": [{"name": "_x", "type": "uint256"}], "outputs": []}, {"stateMutability": "nonpayable", "type": "function", "name": "set", "inputs": [{"name": "new_value", "type": "uint256"}], "outputs": [], "gas": 37090}, {"stateMutability": "view", "type": "function", "name": "get", "inputs": [{"name": "user", "type": "address"}], "outputs": [{"name": "", "type": "uint256"}], "gas": 2633}, {"stateMutability": "payable", "type": "function", "name": "pay", "inputs": [{"name": "user", "type": "address"}], "outputs": [], "gas": 36611}, {"stateMutability": "view", "type": "function", "name": "stored_data", "inputs": [{"name": "arg0", "type": "address"}], "outputs": [{"name": "", "type": "uint256"}], "gas": 2693}]
+    // const contactAddress = '0xbee4d28057596cfb1c381f2ebbb8eb5143c36159'
+    // async function getValue() {
+    //   console.log('GetValue')
+    //   const contract = new window.web3.eth.Contract(abi, contactAddress);
+    //   contract.methods.get('0x7e583bf0284c1830ff38a3b18c2eca497d34b687').call((err, result) => {
+    //     console.log(result) })
+    // }
+    //
+    // async function pay() {
+    //   const contract = new window.web3.eth.Contract(abi, contactAddress);
+    //   contract.methods.pay('0x09d94aF784e2b033B0B5D9425C7767649adEE820').call((err, result) => {
+    //     console.log(result) })
+    // }
+    </script>
+</body>
+</html>
